--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-success">Request Invite</button>
+          <button type="button" class="btn btn-success">
+            Request Invite
+          </button>
         </div>
       </nav>
       <!-- Navbar -->
@@ -146,16 +148,21 @@
             </g>
           </svg>
         </div>
-        <h1 class="h1-text">
-          Next generation digital banking
-        </h1>
-        <h6 class="primary-text">
-          Take your financial life online. Your Easybank account will be a
-          one-stop-shop for spending, saving, budgeting, investing, and much
-          more.
-        </h6>
-        <button type="button" class="btn btn-success">Request Invite</button>
-        <!-- <div class="graphic">
+        <div class="mobile-wrapper">
+          <h1 class="h1-text">
+            Next generation digital banking
+          </h1>
+          <h6 class="primary-text">
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </h6>
+          <div class="graphic-wrapper">
+            <button type="button" class="btn btn-success">
+              Request Invite
+            </button>
+          </div>
+          <!-- <div class="graphic">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -207,30 +214,60 @@
             </g>
           </svg>
         </div> -->
-      </div>
+          <div class="small-paragraphs">
+            <div class="h2-text">Why choose Easybank?</div>
 
-      Why choose Easybank? We leverage Open Banking to turn your bank account
-      into your financial hub. Control your finances like never before. Online
-      Banking Our modern web and mobile applications allow you to keep track of
-      your finances wherever you are in the world. Simple Budgeting See exactly
-      where your money goes each month. Receive notifications when you’re close
-      to hitting your limits. Fast Onboarding We don’t do branches. Open your
-      account in minutes online and start taking control of your finances right
-      away. Open API Manage your savings, investments, pension, and much more
-      from one account. Tracking your money has never been easier. Latest
-      Articles By Claire Robinson Receive money in any currency with no fees The
-      world is getting smaller and we’re becoming more mobile. So why should you
-      be forced to only receive money in a single … By Wilson Hutton Treat
-      yourself without worrying about money Our simple budgeting feature allows
-      you to separate out your spending and set realistic limits each month.
-      That means you … By Wilson Hutton Take your Easybank card wherever you go
-      We want you to enjoy your travels. This is why we don’t charge any fees on
-      purchases while you’re abroad. We’ll even show you … By Claire Robinson
-      Our invite-only Beta accounts are now live! After a lot of hard work by
-      the whole team, we’re excited to launch our closed beta. It’s easy to
-      request an invite through the site ... About Us Contact Blog Careers
-      Support Privacy Policy Request Invite © Easybank. All Rights Reserved
+            <div class="primary-text">
+              We leverage Open Banking to turn your bank account into your
+              financial hub. Control your finances like never before.
+            </div>
+
+            <div class="h3-text">Online Banking</div>
+
+            <div class="primary-text">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </div>
+
+            <div class="h3-text">Simple Budgeting</div>
+
+            <div class="primary-text">
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
+            </div>
+
+            <div class="h3-text">Fast Onboarding</div>
+
+            <div class="primary-text">
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
+            </div>
+
+            <div class="h3-text">Open API</div>
+
+            <div class="primary-text">
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
+            </div>
+          </div>
+
+          <!-- Latest Articles By Claire Robinson Receive money in any currency with
+          no fees The world is getting smaller and we’re becoming more mobile.
+          So why should you be forced to only receive money in a single … By
+          Wilson Hutton Treat yourself without worrying about money Our simple
+          budgeting feature allows you to separate out your spending and set
+          realistic limits each month. That means you … By Wilson Hutton Take
+          your Easybank card wherever you go We want you to enjoy your travels.
+          This is why we don’t charge any fees on purchases while you’re abroad.
+          We’ll even show you … By Claire Robinson Our invite-only Beta accounts
+          are now live! After a lot of hard work by the whole team, we’re
+          excited to launch our closed beta. It’s easy to request an invite
+          through the site ... About Us Contact Blog Careers Support Privacy
+          Policy Request Invite © Easybank. All Rights Reserved -->
+        </div>
+      </div>
     </div>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
