fixed overlay of phone graphic, rounded button, centered and formatted sub-heading

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
             </g>
           </svg>
         </div>
+        <img class="image" src="images/image-mockups.png" alt="phonez" />
+
         <div class="mobile-wrapper">
           <h1 class="h1-text">
             Next generation digital banking
@@ -162,7 +164,7 @@
               Request Invite
             </button>
           </div>
-          <!-- <div class="graphic">
+          <!-- <div class="desktop-graphic">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
