added footer and minimal styling

--- a/index.html
+++ b/index.html
@@ -404,9 +404,20 @@
             </div>            </div>
 
           </div>
+<div class="footer flex">   
 
-          <!--                 About Us Contact Blog Careers Support Privacy
-          Policy Request Invite © Easybank. All Rights Reserved -->
+  <ul class="footer-nav">
+    <img src="images/logo.svg" alt="easybank logo">
+    <li>About Us</li>
+    <li>Contact</li>
+    <li>Blog</li>
+    <li>Careers</li>
+    <li>Support</li>
+    <li>Privacy
+          Policy</li>
+  </ul>
+      <button>Request Invite</button> <div class="copywrite">© Easybank. All Rights Reserved</div>  </div>
+                  
         </div>
       </div>
     </div>
